test/coercions/negative/bad_type_id.mli.expected

*******************************
********** Parsed file ********
*******************************
type t1
[@@@gospel {| function c (x: t1) : t1 |}[@@gospel {| coercion |}]]

*******************************
****** GOSPEL translation *****
*******************************
(*@ open Gospelstdlib *)

type t1
  

(*@ function c ...
    coercion *)
File "bad_type_id.mli", line 3, characters 10-11:
Error: The function `c' does not have a valid coercion type.
